--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,9 @@
-<h1>ようこそ Bookersへ！</h1>
-<p>Bookersでは、さまざまな書籍に関するあなたの意見や<br>
-印象を共有し交換することができます</p>
+<div class="top">
+<h1>ようこそ <strong>Bookers</strong> へ！</h1>
+ <p><strong>Bookers</strong>では、さまざまな書籍に関するあなたの意見や</p>
+ <p>印象を共有し交換することができます</p>
 
 <!--↓後にaタグ？投稿一覧画面へ飛ぶように変更-->
-<p>start</p>
+<a href="/books">start</a>
+
+</div>
