[Fix]indexアクション

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<p>Title:<%= @book.title %></p>
+<p>body:<%= @book.body %></p>
+
+<a href="#">Edit</a>
+<a href="#">Back</a>
