--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,33 +1,32 @@
-<h1>Books</h1>
+<h3>Books</h3>
+
 <table>
  <thead>
- <tr>
- <th>Title</th>
- <th>Body</th>
- <th></th>
- </tr>
+  <tr>
+   <th>title</th>
+   <th>body</th>
+   <th></th>
+  </tr>
  </thead>
 
  <tbody>
- <% @books.each do |book| %>
+  <% @books.each do |book| %>
  <tr>
- <td><%= book.title %></td>
- <td><%= book.body %></td>
- <td>
- <%= link_to "show", book_path(book.id) %>
-<%= link_to "edit", edit_book_path(book) %>
-<%= link_to "destroy", book, "data-confirm" => "Are you sure?" %>
- </td>
- </tr>
- <% end %>
-
- </tbody>
+  <td><%= book.title %></td>
+  <td><%= book.body %></td>
+<td><%= link_to "show", book_path(book.id) %></td>
+<td><%= link_to "edit", edit_book_path(list.id) %></td>
+<td><%= link_to "destroy", destroy_book_path(list.id), method: :delete, "data-confirm" => "Are you sure?" %>
+</td>
+</tr>
+<% end %>
+</tbody>
 </table>
 
 
  <h2>New book</h2>
  <!-- form_withの部分 -->
- <%= form_with model:@book,url:'/books', local:true do |f| %>
+ <%= form_with model: @book,url:'/books', local:true do |f| %>
  <p>Title</p>
  <%= f.text_field :title %>
  <P>Body</P>
