--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+<%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
+ <p>Title</p>
+ <%= f.text_field :title %>
+ <p>Body</p>
+ <%= f.text_area :body %>
+ <%= f.submit 'Update Book' %>
+<% end %>
+
+<a href="#">Show</a>
+<a href="#">Back</a>
