--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,9 +15,8 @@
   <td><%= book.title %></td>
   <td><%= book.body %></td>
 <td><%= link_to "show", book_path(book.id) %></td>
-<td><%= link_to "edit", edit_book_path(list.id) %></td>
-<td><%= link_to "destroy", destroy_book_path(list.id), method: :delete, "data-confirm" => "Are you sure?" %>
-</td>
+<td><%= link_to "edit", edit_book_path(book.id) %></td>
+
 </tr>
 <% end %>
 </tbody>
