--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,9 +14,10 @@
  <tr>
   <td><%= book.title %></td>
   <td><%= book.body %></td>
-<td><%= link_to "show", book_path(book.id) %></td>
-<td><%= link_to "edit", edit_book_path(book.id) %></td>
-
+<td><%= link_to "Show", book_path(book.id) %></td>
+<td><%= link_to "Edit", edit_book_path(book.id) %></td>
+<td><%= link_to "Destroy", destroy_book_path(book.id),method: :delete, "date-confirm" => "Are you sure?" %></td>
+    <%= link_to "削除", destroy_todolist_path(@list.id), method: :delete, "data-confirm" => "" %>
 </tr>
 <% end %>
 </tbody>
@@ -24,6 +25,13 @@
 
 
  <h2>New book</h2>
+ <% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+   <%= message %>
+  <% end %>
+ <% end %>
+
  <!-- form_withの部分 -->
  <%= form_with model: @book,url:'/books', local:true do |f| %>
  <p>Title</p>
