--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,8 +16,7 @@
   <td><%= book.body %></td>
 <td><%= link_to "Show", book_path(book.id) %></td>
 <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-<td><%= link_to "Destroy", destroy_book_path(book.id),method: :delete, "date-confirm" => "Are you sure?" %></td>
-    <%= link_to "削除", destroy_todolist_path(@list.id), method: :delete, "data-confirm" => "" %>
+<td><%= link_to "Destroy", destroy_book_path(book.id),method: :delete, "data-confirm" => "Are you sure?" %></td>
 </tr>
 <% end %>
 </tbody>
