[Add]編集時のバリテーション機能

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,10 +26,17 @@
     margin: 33px;
      }
 
-p {
+.top-text {
   margin:33px;
 }
 
-a {
+.top-enter {
   margin: 33px;
 }
+
+main {
+  margin: 33px;
+  font-family: verdana, arial, helvetica, sans-serif;
+  
+}
+
