--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,8 @@
-<h3>Books</h3>
+<main>
+<p id="notice">
+  <%= notice %> </p>
+
+<h1>Books</h1>
 
 <table>
  <thead>
@@ -39,3 +43,5 @@
  <%= f.text_area :body %>
  <%= f.submit 'Create Book' %>
 <% end %>
+
+</main>
