--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice">
  <%= notice %> </p>
- 
-<p>Title:<%= @book.title %></p>
-<p>Body:<%= @book.body %></p>
+
+<p><strong>Title:</strong><%= @book.title %></p>
+<p><strong>Body:</strong><%= @book.body %></p>
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
 |
