--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,9 @@
 <div class="top">
-<h1>ようこそ <strong>Bookers</strong> へ！</h1>
- <p><strong>Bookers</strong>では、さまざまな書籍に関するあなたの意見や</p>
- <p>印象を共有し交換することができます</p>
+<h1 class="top-title">ようこそ <strong>Bookers</strong> へ！</h1>
+ <p class="top-text"><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</p>
+ <p class="top-text">印象を共有し交換することができます</p>
 
 <!--↓後にaタグ？投稿一覧画面へ飛ぶように変更-->
-<a href="/books">start</a>
+<a class="top-enter" href="/books">start</a>
 
 </div>
