--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,8 +7,8 @@
 <table>
  <thead>
   <tr>
-   <th>title</th>
-   <th>body</th>
+   <th>Title</th>
+   <th>Body</th>
    <th></th>
   </tr>
  </thead>
